Making it prod grade ready